--- a/page2.html
+++ b/page2.html
@@ -2,9 +2,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>document</title>
 </head>
 <body>
-    
+    <a>Hello</a>
 </body>
 </html>
