commit 3 pages wich change a tag

--- a/pageTag.html
+++ b/pageTag.html
@@ -2,9 +2,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>page3</title>
+    <title>PageTag</title>
 </head>
 <body>
-<a>Change 1 in a tag</a>
+    
 </body>
 </html>
